python-plow (1.0.2) lucid; urgency=low

  * Fix bad handling of is_dry_run()

 -- Vincent Vinet <vvinet@revolutionlinux.com>  Wed, 28 Sep 2011 15:18:25 -0400

python-plow (1.0) lucid; urgency=low

  * Extraction from OAPS into a separate library

 -- Vincent Vinet <vvinet@revolutionlinux.com>  Mon, 26 Sep 2011 16:15:27 -0400